--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
     </head>
     <body>
-        <h1>This is main heading H1</h1>
+        <h1>This is a main heading H1</h1>
         <p>This is a paragraph p</p>
+        <p>This is a second paragraph p</p>
     </body>
 </html>
