--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
-    <head>
-    </head>
-    <body>
-        <h1>This is a main heading H1</h1>
-        <p>This is a paragraph p</p>
-        <p>This is a second paragraph p</p>
-    </body>
+
+<head>
+</head>
+
+<body>
+    <h1>This is a main heading H1</h1>
+    <p>This is a paragraph p</p>
+    <p>This is a second paragraph p</p>
+    <p>This is the third paragraph p</p>
+</body>
+
 </html>
